# attempt2

./: .gitignore  LICENSE  README.md
arm_moving/: .cproject  attempt2  main.cpp
board_planning/: .mbed  .mbedignore  CMakeLists.txt  Makefile  config.yaml  main.cpp  openocd.sh  pregdb.conf  pregdb.sh
board_planning/attempt2/: board.cpp  board.h
ping_pong_detect/: .cproject  .project  Makefile  attempt2  attempt2.h  ball_psd_read.cpp  main.cpp  state_work.cpp
ping_pong_detect/backup/: ping_pong.1480992420976.pdom  ping_pong.language.settings.xml
ping_pong_detect/symbols/: ASM_FLAGS  ASM_FLAGS_D.h  CXX_FLAGS  C_FLAGS  C_FLAGS_D.h  INCLUDE_PATHS
