cmake_minimum_required(VERSION 3.6)
project(board_planning)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp)
#add_executable(board_planning ${SOURCE_FILES})
add_executable(board_planning.elf ${SOURCE_FILES})
include_directories(/usr/lib/gcc/arm-none-eabi/4.9.3/../../../arm-none-eabi/include/c++/4.9.3)
include_directories(/usr/lib/gcc/arm-none-eabi/4.9.3/../../../arm-none-eabi/include/c++/4.9.3/arm-none-eabi)
include_directories(/usr/lib/gcc/arm-none-eabi/4.9.3/../../../arm-none-eabi/include/c++/4.9.3/backward)
include_directories(/usr/lib/gcc/arm-none-eabi/4.9.3/include)
include_directories(/usr/lib/gcc/arm-none-eabi/4.9.3/include-fixed)
include_directories(/usr/lib/gcc/arm-none-eabi/4.9.3/../../../arm-none-eabi/include)
include_directories(/usr/lib/gcc/arm-none-eabi/4.9.3/include)
include_directories(/usr/lib/gcc/arm-none-eabi/4.9.3/include-fixed)
include_directories(/usr/lib/gcc/arm-none-eabi/4.9.3/../../../arm-none-eabi/include)
include_directories(mbed-os)
include_directories(mbed-os/cmsis)
include_directories(mbed-os/cmsis/TOOLCHAIN_GCC)
include_directories(mbed-os/docs)
include_directories(mbed-os/drivers)
include_directories(mbed-os/events)
include_directories(mbed-os/events/equeue)
include_directories(mbed-os/features)
include_directories(mbed-os/features/frameworks)
include_directories(mbed-os/features/frameworks/greentea-client)
include_directories(mbed-os/features/frameworks/greentea-client/greentea-client)
include_directories(mbed-os/features/frameworks/greentea-client/source)
include_directories(mbed-os/features/frameworks/unity)
include_directories(mbed-os/features/frameworks/unity/source)
include_directories(mbed-os/features/frameworks/unity/unity)
include_directories(mbed-os/features/frameworks/utest)
include_directories(mbed-os/features/frameworks/utest/source)
include_directories(mbed-os/features/frameworks/utest/utest)
include_directories(mbed-os/features/mbedtls)
include_directories(mbed-os/features/mbedtls/importer)
include_directories(mbed-os/features/mbedtls/inc)
include_directories(mbed-os/features/mbedtls/inc/mbedtls)
include_directories(mbed-os/features/mbedtls/platform)
include_directories(mbed-os/features/mbedtls/platform/inc)
include_directories(mbed-os/features/mbedtls/platform/src)
include_directories(mbed-os/features/mbedtls/src)
include_directories(mbed-os/features/nanostack)
include_directories(mbed-os/features/netsocket)
include_directories(mbed-os/features/storage)
include_directories(mbed-os/hal)
include_directories(mbed-os/hal/storage_abstraction)
include_directories(mbed-os/platform)
include_directories(mbed-os/rtos)
include_directories(mbed-os/rtos/rtx)
include_directories(mbed-os/rtos/rtx/TARGET_CORTEX_M)
include_directories(mbed-os/rtos/rtx/TARGET_CORTEX_M/TARGET_RTOS_M4_M7)
include_directories(mbed-os/rtos/rtx/TARGET_CORTEX_M/TARGET_RTOS_M4_M7/TOOLCHAIN_GCC)
include_directories(mbed-os/targets)
include_directories(mbed-os/targets/TARGET_STM)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F4)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_NUCLEO_F401RE)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_NUCLEO_F401RE/device)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_NUCLEO_F401RE/device/TOOLCHAIN_GCC_ARM)
include_directories(mbed-os/targets/TARGET_STM/TARGET_STM32F4/device)

add_definitions(-DMBED_CONF_EVENTS_PRESENT=1)
add_definitions(-DMBED_CONF_RTOS_PRESENT=1)
add_definitions(-DMBED_CONF_PLATFORM_STDIO_BAUD_RATE=9600)
add_definitions(-DMBED_CONF_NSAPI_PRESENT=1)
add_definitions(-DMBED_CONF_PLATFORM_DEFAULT_SERIAL_BAUD_RATE=9600)
add_definitions(-DMBED_CONF_PLATFORM_STDIO_FLUSH_AT_EXIT=1)
add_definitions(-DMBED_CONF_PLATFORM_STDIO_CONVERT_NEWLINES=0)
add_definitions(-DUNITY_INCLUDE_CONFIG_H)

add_definitions(-D__MBED__=1)
add_definitions(-DDEVICE_I2CSLAVE=1)
add_definitions(-DTARGET_LIKE_MBED)
add_definitions(-DDEVICE_PORTOUT=1)
add_definitions(-DMBED_BUILD_TIMESTAMP=1482225095.77)
add_definitions(-DTARGET_RTOS_M4_M7)
add_definitions(-DDEVICE_RTC=1)
add_definitions(-DTOOLCHAIN_object)
add_definitions(-DDEVICE_SERIAL_ASYNCH=1)
add_definitions(-DTARGET_STM32F4)
add_definitions(-D__CMSIS_RTOS)
add_definitions(-DTOOLCHAIN_GCC)
add_definitions(-DDEVICE_I2C_ASYNCH=1)
add_definitions(-DTARGET_CORTEX_M)
add_definitions(-DTARGET_LIKE_CORTEX_M4)
add_definitions(-DTARGET_M4)
add_definitions(-DTARGET_UVISOR_UNSUPPORTED)
add_definitions(-DDEVICE_SPI_ASYNCH=1)
add_definitions(-DDEVICE_SERIAL=1)
add_definitions(-DDEVICE_INTERRUPTIN=1)
add_definitions(-DDEVICE_I2C=1)
add_definitions(-DTRANSACTION_QUEUE_SIZE_SPI=2)
add_definitions(-D__CORTEX_M4)
add_definitions(-DDEVICE_STDIO_MESSAGES=1)
add_definitions(-DTARGET_STM32F401RE)
add_definitions(-DTARGET_FF_MORPHO)
add_definitions(-D__FPU_PRESENT=1)
add_definitions(-DTARGET_FF_ARDUINO)
add_definitions(-DDEVICE_PORTIN=1)
add_definitions(-DTARGET_RELEASE)
add_definitions(-DTARGET_STM)
add_definitions(-DDEVICE_PORTINOUT=1)
add_definitions(-DDEVICE_SERIAL_FC=1)
add_definitions(-DTARGET_NUCLEO_F401RE)
add_definitions(-D__MBED_CMSIS_RTOS_CM)
add_definitions(-DDEVICE_SLEEP=1)
add_definitions(-DTOOLCHAIN_GCC_ARM)
add_definitions(-DDEVICE_SPI=1)
add_definitions(-DUSB_STM_HAL)
add_definitions(-DDEVICE_ERROR_RED=1)
add_definitions(-DDEVICE_SPISLAVE=1)
add_definitions(-DDEVICE_ANALOGIN=1)
add_definitions(-DDEVICE_PWMOUT=1)
add_definitions(-DARM_MATH_CM4)